--- a/social-network/static/index.html
+++ b/social-network/static/index.html
@@ -15,6 +15,7 @@
     <link href="css/toast.css" rel="stylesheet" />
     <link rel="stylesheet" href="css/login.css"/>
     <link rel="stylesheet" href="css/app.css"/>
+    <link rel="stylesheet" href="css/registration.css"/>
 </head>
 <body>
 <div id="socialNetwork">
