--- a/social-network/static/index.html
+++ b/social-network/static/index.html
@@ -16,6 +16,7 @@
     <link rel="stylesheet" href="css/login.css"/>
     <link rel="stylesheet" href="css/app.css"/>
     <link rel="stylesheet" href="css/registration.css"/>
+    <link rel="stylesheet" href="css/changeProfileImage.css"/>
 </head>
 <body>
 <div id="socialNetwork">
@@ -33,7 +34,7 @@
                     <a href="#"><span class="fa fa-user"></span> My Profile</a>
                 </li>
                 <li>
-                    <a href="#"><span class="fa fa-edit"></span>Edit Profile</a>
+                    <a href="#"  v-on:click="editProfilePage()"><span class="fa fa-edit"></span>Edit Profile</a>
                 </li>
                 <li>
                     <a href="#"><span class="fa fa-user-plus"></span>Friend Requests</a>
@@ -64,7 +65,7 @@
                     <a href="#"><span class="fa fa-user"></span> My Profile</a>
                 </li>
                 <li>
-                    <a href="#"><span class="fa fa-edit"></span>Edit Profile</a>
+                    <a href="#" v-on:click="editProfilePage()"><span class="fa fa-edit"></span>Edit Profile</a>
                 </li>
                 <li>
                     <a href="#"><span class="fa fa-search"></span>Find Users</a>
@@ -120,6 +121,9 @@
 <script src="app/login.js"></script>
 <script src="app/register.js"></script>
 <script src="app/changePassword.js"></script>
+<script src="app/editProfilePage.js"></script>
+<script src="app/editBasicInfo.js"></script>
+<script src="app/editProfileImage.js"></script>
 <script src="app/app.js"></script>
 
 
