--- a/social-network/static/index.html
+++ b/social-network/static/index.html
@@ -20,6 +20,8 @@
     <link rel="stylesheet" href="css/userInfo.css"/>
     <link rel="stylesheet" href="css/friendsList.css"/>
     <link rel="stylesheet" href="css/friendRequestPage.css"/>
+    <link rel="stylesheet" href="css/postsList.css"/>
+    <link rel="stylesheet" href="css/postCard.css"/>
 </head>
 <body>
 <div id="socialNetwork">
@@ -107,8 +109,9 @@
 <script src="js/vue-router.js"></script>
 <script src="js/axios.js"></script>
 <script src="js/jquery.min.js"></script>
-<script src="js/bootstrap.min.js"></script>
 <script src="js/toast.js"></script>
+<script src="js/popper.js"></script>
+<script src="js/bootstrap.min.js"></script>
 
 <!--helper shared js functions -->
 <script src="app/common/api.js"></script>
@@ -128,6 +131,9 @@
 <script src="app/userInfoComponent.js"></script>
 <script src="app/friendListComponent.js"></script>
 <script src="app/friendRequestsPage.js"></script>
+<script src="app/postsList.js"></script>
+<script src="app/postCard.js"></script>
+<script src="app/commentComponent.js"></script>
 <script src="app/app.js"></script>
 
 
