added initial home page for regular user

--- a/social-network/static/index.html
+++ b/social-network/static/index.html
@@ -22,6 +22,7 @@
     <link rel="stylesheet" href="css/friendRequestPage.css"/>
     <link rel="stylesheet" href="css/postsList.css"/>
     <link rel="stylesheet" href="css/postCard.css"/>
+    <link rel="stylesheet" href="css/wavehand.css"/>
 </head>
 <body>
 <div id="socialNetwork">
