--- a/social-network/static/index.html
+++ b/social-network/static/index.html
@@ -89,7 +89,7 @@
             <hr/>
             <ul class="list-unsettled components mb-5">
                 <li>
-                    <a href="#"><span class="fa fa-user-plus"></span>Register</a>
+                    <a href="#" v-on:click="reg()"><span class="fa fa-user-plus"></span>Register</a>
                 </li>
                 <li>
                     <a href="#"><span class="fa fa-search"></span>Find Users</a>
