added regular post

--- a/social-network/static/index.html
+++ b/social-network/static/index.html
@@ -135,8 +135,8 @@
 <script src="app/postsList.js"></script>
 <script src="app/postCard.js"></script>
 <script src="app/commentComponent.js"></script>
+<script src="app/addRegularPost.js"></script>
 <script src="app/app.js"></script>
-
 
 
 </body>
