added image upload

--- a/social-network/static/index.html
+++ b/social-network/static/index.html
@@ -136,6 +136,7 @@
 <script src="app/postCard.js"></script>
 <script src="app/commentComponent.js"></script>
 <script src="app/addRegularPost.js"></script>
+<script src="app/addImagePost.js"></script>
 <script src="app/app.js"></script>
 
 
