Search users (FE)

--- a/social-network/static/index.html
+++ b/social-network/static/index.html
@@ -24,6 +24,7 @@
     <link rel="stylesheet" href="css/postCard.css"/>
     <link rel="stylesheet" href="css/wavehand.css"/>
     <link rel="stylesheet" href="css/chatBox.css"/>
+    <link rel="stylesheet" href="css/search.css.css"/>
 </head>
 <body>
 <div id="socialNetwork">
@@ -93,7 +94,7 @@
                     <a href="#" v-on:click="reg()"><span class="fa fa-user-plus"></span>Register</a>
                 </li>
                 <li>
-                    <a href="#"><span class="fa fa-search"></span>Find Users</a>
+                    <a href="#" v-on:click="findUsersPage()"><span class="fa fa-search"></span>Find Users</a>
                 </li>
             </ul>
         </nav>
