Search for admin (FE)

--- a/social-network/static/index.html
+++ b/social-network/static/index.html
@@ -73,7 +73,7 @@
                     <a href="#" v-on:click="editProfilePage()"><span class="fa fa-edit"></span>Edit Profile</a>
                 </li>
                 <li>
-                    <a href="#"><span class="fa fa-search"></span>Find Users</a>
+                    <a href="#"  v-on:click="searchAdmin()"><span class="fa fa-search"></span>Find Users</a>
                 </li>
                 <li>
                     <a href="#" v-on:click="mess()"><span class="fa fa-paper-plane"></span> Messages</a>
@@ -122,6 +122,7 @@
 
 <!-- components -->
 
+<script src="app/searchPageAdmin.js"</script
 <script src="app/findUsersPage.js"></script>
 <script src="app/chatComponent.js"></script>
 <script src="app/messageComponent.js"></script>
