--- a/social-network/static/index.html
+++ b/social-network/static/index.html
@@ -78,9 +78,9 @@
                 <li>
                     <a href="#"  v-on:click="searchAdmin()"><span class="fa fa-search"></span>Find Users</a>
                 </li>
-<!--                <li>-->
-<!--                    <a href="#" v-on:click="mess()"><span class="fa fa-paper-plane"></span> Messages</a>-->
-<!--                </li>-->
+                <li>
+                    <a href="#" v-on:click="mess()"><span class="fa fa-paper-plane"></span> Messages</a>
+                </li>
                 <li>
                     <a href="#" v-on:click="changePassword()"><span class="fa fa-key"></span>Change Password</a>
                 </li>
